--- a/client/src/components/Posts/styles.css
+++ b/client/src/components/Posts/styles.css
@@ -1,3 +1,7 @@
 .posts-container {
+  padding: 20px;
   width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
 }
