--- a/client/src/components/Posts/Post/styles.css
+++ b/client/src/components/Posts/Post/styles.css
@@ -2,9 +2,10 @@
   box-shadow: 10px 10px 10px #888888;
   border: 2px solid rgb(203, 203, 203);
   border-radius: 20px;
-  width: 29%;
+  width: 31%;
   margin-right: 15px;
   margin-bottom: 15px;
+  cursor: pointer;
 }
 
 .card-item-overlay {
@@ -17,12 +18,6 @@
   top: 5px;
   left: 8px;
 }
-.card-item-overlay h3 {
-  margin: 0;
-}
-.card-item-overlay p {
-  margin-top: -1px;
-}
 
 .card-item-description {
   padding: 10px;
@@ -34,4 +29,34 @@
 .card-item img {
   width: 101%;
   border-radius: 15px 15px 0 0;
+}
+
+.fa-bars {
+  position: absolute;
+  font-size: 20px;
+  color: white;
+  top: 5px;
+  right: 5px;
+}
+.like-btn,
+.delete-btn {
+  font-size: 24px;
+}
+.like-btn {
+  margin-left: 5px;
+}
+
+.card-buttom {
+  color: black;
+  padding: 5px;
+  margin-top: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card-buttom a {
+  font-size: 20px;
+  color: black;
+  text-decoration: none;
 }
