--- a/client/src/components/Form/styles.css
+++ b/client/src/components/Form/styles.css
@@ -16,4 +16,20 @@
   display: block;
   width: 100%;
   margin: 0 auto;
+  padding: 8px;
+  border-radius: 20px;
+}
+
+.clear-btn {
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  font-size: 14px;
+  display: block;
+  width: 100%;
+  margin: 10px auto;
+  padding: 8px;
+  border: 2px solid black;
+  background-color: whitesmoke;
+  border-radius: 20px;
 }
